@@ -1,3 +1,15 @@
+Sat Jul 17 02:28:28 1999  Mark P. Mitchell  <mark@codesourcery.com>
+
+	* elflink.h (elf_link_adjust_relocs): New function.
+	(elf_bfd_final_link): Use it.
+	(elf_link_input_bfd): Deal with the fact that there can be 
+	two relocation sections for a single section.
+	(elf_reloc_link_order): Likewise.
+
+	* elf32-mips.c (_bfd_mips_elf_final_link): Don't set GP for 
+	a relocateable object.
+	(_bfd_mips_elf_relocate_section): Handle relocateable links.
+
 1999-07-16  Jakub Jelinek  <jj@ultra.linux.cz>
 
 	* elf64-sparc.c (sparc64_elf_info_to_howto): Use ELF64_R_TYPE_ID.
